--- a/practice_python/test.html
+++ b/practice_python/test.html
@@ -5,6 +5,9 @@
     <title></title>
   </head>
   <body>
+    <h2 style="display: inline">H</h2>
+    <h2 style="display: inline">O</h2>
+    <h2 style="display: inline">E</h2>
     <input id='location' type="radio" name="location" value="Location">Location
     <script type="text/javascript">
       let locRadio = document.querySelector('#location');
